# src/auth/auth.controller.ts
@@ -1,9 +1,16 @@
-import { ApiResponse, ApiTags, ApiUnauthorizedResponse, ApiUnprocessableEntityResponse } from '@nestjs/swagger';
-import { ApiBadRequestResponse } from '../__common/decorators';
+import {
+  ApiAcceptedResponse,
+  ApiBearerAuth,
+  ApiResponse,
+  ApiTags,
+  ApiUnauthorizedResponse,
+  ApiUnprocessableEntityResponse,
+} from '@nestjs/swagger';
+import { ApiBadRequestResponse } from '/common/decorators';
 import { RegisterResponse } from './response/register.response';
 import { RegisterRequest } from './request/register.request';
 import { UsersService } from '../users/users.service';
-import { PasswordUtils } from '../__common/utils';
+import { PasswordUtils } from '/common/utils';
 import { LoginRequest } from './request/login.request';
 import { AuthService } from './auth.service';
 import { LoginResponse } from './response/login.response';
@@ -15,19 +22,25 @@ import {
   HttpCode,
   HttpStatus,
   Post,
+  UnauthorizedException,
   UnprocessableEntityException,
+  UseGuards,
 } from '@nestjs/common';
+import { AuthGuard } from './guards/auth.gueard';
 
 @ApiTags('Authentication')
 @Controller('sign')
 export class AuthController {
-  constructor(private readonly usersService: UsersService, private readonly authService: AuthService) {}
+  constructor(
+    private readonly usersService: UsersService,
+    private readonly authService: AuthService,
+  ) {}
 
   @Post('up')
   @ApiBadRequestResponse()
   @HttpCode(HttpStatus.CREATED)
   @ApiResponse({ status: HttpStatus.CREATED, description: 'Returns OK when successful', type: RegisterResponse })
-  async register(@Body() payload: RegisterRequest): Promise<RegisterResponse> {
+  async signUp(@Body() payload: RegisterRequest): Promise<RegisterResponse> {
     if (!payload.passwordsMatch()) {
       throw new BadRequestException('Passwords do not match');
     }
@@ -40,37 +53,42 @@ export class AuthController {
 
   @Post('in')
   @ApiBadRequestResponse()
+  @ApiUnauthorizedResponse()
   @HttpCode(HttpStatus.OK)
   @ApiUnprocessableEntityResponse({ description: 'Returns 422 when the user is not active' })
   @ApiResponse({ status: HttpStatus.OK, description: 'Returns OK when successful', type: Object })
-  async login(@Body() payload: LoginRequest): Promise<LoginResponse> {
+  async signIn(@Body() payload: LoginRequest): Promise<LoginResponse> {
     const user = await this.usersService.getByUsername(payload.username);
 
-    if (!user) throw new BadRequestException('Invalid credentials');
-    if (user.status !== UserStatus.ACTIVE) throw new UnprocessableEntityException('User is not active');
+    if (!user) throw new UnauthorizedException('Invalid credentials');
 
     const passwordsMatch = await PasswordUtils.hashCompare(payload.password, user.password);
 
-    if (!passwordsMatch) throw new BadRequestException('Invalid credentials');
+    if (!passwordsMatch) throw new UnauthorizedException('Invalid credentials');
+    if (user.status !== UserStatus.ACTIVE) throw new UnprocessableEntityException('User is not active');
 
     const roles = user.roles.map(({ role }) => role.name);
-    const accessToken = this.authService.sign(user.uuid, roles);
+    const accessToken = this.authService.signAccessToken(user.uuid, roles);
+
+    const refreshToken = this.authService.getRefreshToken();
+    // TODO: Save token into cache with expiration
 
     return {
-      accessToken,
-      expiresIn: 3600,
-      refreshToken: 'refreshToken',
-      refreshTokenExpiresIn: 3600,
+      accessToken: accessToken.value,
+      refreshToken: refreshToken.value,
+      expiresIn: accessToken.expiresIn,
+      refreshTokenExpiresIn: refreshToken.expiresIn,
       roles,
     };
   }
 
   @Post('out')
+  @ApiBearerAuth()
+  @UseGuards(AuthGuard)
   @ApiBadRequestResponse()
   @HttpCode(HttpStatus.ACCEPTED)
-  @ApiUnauthorizedResponse({ description: 'Returns 401 when token is invalid or expired' })
-  @ApiResponse({ status: HttpStatus.ACCEPTED, description: 'Returns ACCEPTED when successful' })
-  async logout(): Promise<void> {
+  @ApiAcceptedResponse()
+  async signOut(): Promise<void> {
     // TODO: Implement me, invalidate token, use local or Redis cache.
   }
 }
